# nates_recipe-V2

./: .gitignore  .pylintrc  9_10_24_Hold_01_targets.csv  AGENTS.md  README.md  __init__.py  auto_optuna-V1.1.py  auto_optuna-V1.2.py  auto_optuna-V1.3.py  auto_optuna-V1.py  battle_tested_optuna_playbook.py  config.py  hold2_target.csv  main.py  ml_utils.py  optimizer.py  pyproject.toml  requirements.txt  results.md  smoke_test.py  test_best_model.py  test_pipeline.py  transformers.py  utils.py  validate_no_config.py
.cursor/rules/: 1.mdc  2.mdc  ll.mdc  pr-review.mdc  prs.mdc
.github/workflows/: ci.yml
PI_PKG/: live-inf.py
auto_optuna/: __init__.py  config.py  legacy.py  main.py  optimizer.py  transformers.py  utils.py
docs/: model_components_overview.md  optuna_scripts_overview.md
tests/: test_modular_package.py  test_pipeline.py  test_preprocessing.py
