[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nates-recipe"
version = "1.3.0"
description = "Recipe optimization pipeline using Optuna"
authors = [{name = "Nate"}]
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "optuna>=3.4.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pathlib2>=2.3.7; python_version < '3.4'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "psutil>=5.9.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]

